Prueba realizada con supertest, obtencion de las notas en la URL /api/notes

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
+NODE_ENV=
 MONGODB_URI=mongodb+srv://martindotdev:6C7coRooIP21ZlzH@fullstackopencluster.asrmplj.mongodb.net/notes_db?retryWrites=true&w=majority&appName=FullStackOpenCluster
 PORT=3001
