--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "test": "cross-env NODE_ENV=development node --test"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,8 @@
     "mongoose": "^8.4.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.3"
+    "cross-env": "^7.0.3",
+    "nodemon": "^3.1.3",
+    "supertest": "^7.0.0"
   }
 }
