--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
-NODE_ENV=
-MONGODB_URI=mongodb+srv://martindotdev:6C7coRooIP21ZlzH@fullstackopencluster.asrmplj.mongodb.net/notes_db?retryWrites=true&w=majority&appName=FullStackOpenCluster
+TEST_MONGODB_URI=mongodb+srv://martindotdev:6C7coRooIP21ZlzH@fullstackopencluster.asrmplj.mongodb.net/test_notes_db?retryWrites=true&w=majority&appName=FullStackOpenCluster
+MONGODB_URI=
+
 PORT=3001
