--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "build:update": "cp -r dist/ ./backend/ && rm -rf ./backend/dist/",
+        "build:update": "rm -rf dist && npm run build && rm -rf ./backend/dist/ && cp -r dist/ ./backend/",
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
         "server": "json-server -p3001 --watch db.json"
